--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,12 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
-
+    numpy
+    scipy
+    matplotlib
+    nanomesh
+    scikit-fem
+    scikit-image
 [options.data_files]
 # This section requires setuptools>=40.6.0
 # It remains empty for now
